--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -69,5 +69,8 @@
 	<welcome-file-list>
 		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
-
+	<!-- 设置session过期时间为2个小时 -->
+	<session-config>
+		<session-timeout>120</session-timeout>
+	</session-config>
 </web-app>
