--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,11 @@
             <artifactId>fastjson</artifactId>
             <version>1.1.37</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.3.2</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
